# bioinfo-school

./: AGENTS.md  lessons.md  reflection.md
Week_4_reproducible/: B_protein_embeddings_esm2.ipynb  README.md  protein_accessions.tsv  pyproject.toml
exercises/week2/: broken_script.py  sample.vcf  vcf_allele_freq.py
exercises/week2/pca_analysis/: expression_matrix.csv  pca_analysis.ipynb  verify_notebook.py
exercises/week2/trap/: extract_cds.py
exercises/week3/: B_protein_embeddings_esm2.ipynb  README.md  fetch_proteins.py  proteins.fasta  results.md
weeks/cheatsheets/: bio-fm.md
